# Arducam-Room-Tracking

./: CMakeLists.txt  Readme.md
components/arducam_esp/: ArduCAM_esp_ov2640.cpp  interface_spi.h  ov2640_regs.h
cppinclude/: human_object.hpp  tracking.hpp
cpplib/: human_object.cpp  tracking.cpp
include/: detect.h  libattopng.h  network_common.h  vibe-background-sequential.h
lib/: detect_api.c  detect_functions.c  erosionByAnchor.c  libattopng.c  network_mqtt.c  vibe-background-sequential.c
main/: CMakeLists.txt  macro.h  main.cpp  main.hpp
nodered/: Room-Monitor-Dashboard.json  Simulation.json
